--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,14 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.invirgance</groupId>
     <artifactId>convirgance-storage</artifactId>
-    <version>0.1-SNAPSHOT</version>
+    <version>0.1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>Convirgance (Storage)</name>
+    <description>
+        Convirgance (Storage) provides local database services for programs
+        to record data and configurations. 
+    </description>
+    <url>https://convirgance.invirgance.com</url>
     <licenses>
         <license>
           <name>MIT License</name>
@@ -59,6 +64,31 @@
                     </dependency>
                 </dependencies>
             </plugin>
+            <plugin>
+                <groupId>org.simplify4u.plugins</groupId>
+                <artifactId>sign-maven-plugin</artifactId>
+                <version>1.1.0</version>
+                <configuration>
+                    <serverId>sign-key-id</serverId>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>sign</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.sonatype.central</groupId>
+                <artifactId>central-publishing-maven-plugin</artifactId>
+                <version>0.7.0</version>
+                <extensions>true</extensions>
+                <configuration>
+                  <publishingServerId>central</publishingServerId>
+                  <checksum>all</checksum>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
     <reporting>
@@ -80,6 +110,14 @@
                 <configuration>
                     
                 </configuration>
+                <reportSets>
+                    <reportSet>
+                        <id>default</id>
+                        <reports>
+                            <report>javadoc</report>
+                        </reports>
+                    </reportSet>
+                </reportSets>
             </plugin>
         </plugins>
     </reporting>
@@ -87,7 +125,7 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>convirgance</artifactId>
-            <version>0.1-SNAPSHOT</version>
+            <version>1.2.0</version>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
